--- a/trunk/bcore/client/Makefile.am
+++ b/trunk/bcore/client/Makefile.am
@@ -11,7 +11,8 @@ helper.cpp \
 handlerthr.cpp \
 clientdynconfig.cpp \
 loglevel.cpp \
-ratio.cpp
+ratio.cpp \
+urlhelper.cpp
 
 noinst_HEADERS = carg.h \
 configuration.h lastfiles.h \
@@ -23,7 +24,8 @@ helper.h \
 handlerthr.h \
 clientdynconfig.h \
 loglevel.h \
-ratio.h
+ratio.h \
+urlhelper.h
 
 libbtgclient_la_CFLAGS   = @DEBUG_CFLAGS@ -DBTG_DEBUG=@BTG_DEBUG@ -DBTG_REV="@BTG_REV@"
 libbtgclient_la_CXXFLAGS = @DEBUG_CXXFLAGS@ -DBTG_DEBUG=@BTG_DEBUG@ -DBTG_REV="@BTG_REV@"
