fix for bug [ Bug #13433 ] Configuration file search paths

--- a/trunk/bcore/Makefile.am
+++ b/trunk/bcore/Makefile.am
@@ -234,6 +234,7 @@ AM_CXXFLAGS         = @CXXFLAGS@ @DEBUG_CXXFLAGS@ \
                     -DBTG_DEBUG=@BTG_DEBUG@ \
                     -DBTG_VERSION="@VERSION@" \
                     -DBTG_BUILD="@BTG_BUILD@" \
-                    -DBTG_REV="@BTG_REV@"
+                    -DBTG_REV="@BTG_REV@" \
+                    -DPREFIX=\"@prefix@\"
 
 INCLUDES            = -I$(top_srcdir) 
