Updated site docs.

--- a/trunk/doc/site/Makefile.am
+++ b/trunk/doc/site/Makefile.am
@@ -13,7 +13,13 @@ howto.rst howto_bfs.rst howto_devel.rst \
 howto-0.3.rst howto-0.4.rst howto-0.5.rst howto-0.6.rst howto-0.7.rst \
 howto-0.9.6.rst howto-0.9.7.rst
 
-html: man-pages $(RST_FILES)
+commanddoc:
+	cd ../commands && $(MAKE) commanddoc
+
+commanddoc_copy:
+	cp ../commands/commands.html .
+ 
+html: commanddoc commanddoc_copy man-pages $(RST_FILES)
 	$(RST2HTML) index.rst > index.html
 	$(RST2HTML) packages.rst > packages.html
 	$(RST2HTML) howto.rst > howto.html
