context_create_url.php added to Makefile

--- a/trunk/UI/www/php/htdocs/bcore/command/Makefile.am
+++ b/trunk/UI/www/php/htdocs/bcore/command/Makefile.am
@@ -6,6 +6,7 @@ context_abort.php \
 context_clean.php \
 context_clean_rsp.php \
 context_create.php \
+context_create_url.php \
 context_fi.php \
 context_fi_rsp.php \
 context_last.php \
