--- a/trunk/utest/Makefile.am
+++ b/trunk/utest/Makefile.am
@@ -61,6 +61,13 @@ if BUILDCLI
   BCORE_CLIENT_TEST_LIB    = $(top_builddir)/bcore/client/libbtgclient.la
 endif
 
+if BUILDURL
+  URL_DEFINES=-DBTG_OPTION_URL=@BTG_OPTION_URL@ @LIBCURL_CPPFLAGS@
+  URL_LIBS=@LIBCURL@
+else
+  URL_DEFINES=-DBTG_OPTION_URL=@BTG_OPTION_URL@
+endif
+
 testrunner_SOURCES = listener.cpp testrunner.cpp test_daemon.cpp test_os.cpp test_gen_transport.cpp test_tcpip.cpp test_http.cpp test_bcore.cpp $(top_srcdir)/bcore/configuration.cpp $(top_srcdir)/bcore/os/gnutlsif.cpp $(BCORE_CLIENT_TEST)
 
 noinst_HEADERS     = listener.h testrunner.h test_daemon.h test_os.h test_gen_transport.h test_tcpip.h test_http.h test_bcore.h files.h $(top_srcdir)/bcore/configuration.h $(BCORE_CLIENT_TEST_HEADER)
@@ -74,30 +81,30 @@ testrunner_LDADD   = $(top_builddir)/bcore/libbtgcore.la $(BCORE_CLIENT_TEST_LIB
                      $(top_builddir)/external/ini/libini.la \
                      $(top_builddir)/bcore/libbtgcore.la
 
-testrunner_LDFLAGS  = @LIBS@ $(CPPUNIT_LIBS) @LIBTORRENT_LIBS@ -l@BOOST_IOSTREAMS_LIB@ -l@BOOST_FILESYSTEM_LIB@ @LIBGNUTLS_LIBS@ @LIBCURL@
+testrunner_LDFLAGS  = @LIBS@ $(CPPUNIT_LIBS) @LIBTORRENT_LIBS@ -l@BOOST_IOSTREAMS_LIB@ -l@BOOST_FILESYSTEM_LIB@ @LIBGNUTLS_LIBS@ $(URL_LIBS)
 
 testrunner_CFLAGS   = @CFLAGS@   $(CPPUNIT_CFLAGS) @LIBTORRENT_CFLAGS@ @LIBGNUTLS_CFLAGS@ \
                       -DBTG_DEBUG=@BTG_DEBUG@ \
                       -DBTG_OPTION_SAVESESSIONS=@BTG_OPTION_SAVESESSIONS@ \
                       -DBTG_OPTION_EVENTCALLBACK=@BTG_OPTION_EVENTCALLBACK@ \
-                      -DBTG_REV="@BTG_REV@" @LIBCURL_CPPFLAGS@
+                      -DBTG_REV="@BTG_REV@" $(URL_DEFINES)
 
 testrunner_CXXFLAGS = @CXXFLAGS@ $(CPPUNIT_CFLAGS) @LIBTORRENT_CFLAGS@ @LIBGNUTLS_CFLAGS@ \
                       -DBTG_DEBUG=@BTG_DEBUG@ \
                       -DBTG_OPTION_SAVESESSIONS=@BTG_OPTION_SAVESESSIONS@ \
                       -DBTG_OPTION_EVENTCALLBACK=@BTG_OPTION_EVENTCALLBACK@ \
-                      -DBTG_REV="@BTG_REV@" @LIBCURL_CPPFLAGS@
+                      -DBTG_REV="@BTG_REV@" $(URL_DEFINES)
 
 AM_CFLAGS         = @CFLAGS@   @DEBUG_CFLAGS@ \
                     -DBTG_DEBUG=@BTG_DEBUG@ \
                     -DBTG_VERSION="@VERSION@" \
                     -DBTG_BUILD="@BTG_BUILD@" \
-                    -DBTG_REV="@BTG_REV@" @LIBCURL_CPPFLAGS@
+                    -DBTG_REV="@BTG_REV@" $(URL_DEFINES)
 
 AM_CXXFLAGS       = @CXXFLAGS@ @DEBUG_CXXFLAGS@ \
                     -DBTG_DEBUG=@BTG_DEBUG@ \
                     -DBTG_VERSION="@VERSION@" \
                     -DBTG_BUILD="@BTG_BUILD@" \
-                    -DBTG_REV="@BTG_REV@" @LIBCURL_CPPFLAGS@
+                    -DBTG_REV="@BTG_REV@" $(URL_DEFINES)
 
 INCLUDES = -I$(top_srcdir)
