--- a/trunk/bcore/Makefile.am
+++ b/trunk/bcore/Makefile.am
@@ -160,7 +160,7 @@ command/context_abort.h \
 command/context_clean.h \
 command/context_clean_rsp.h \
 command/context_create.h \
-command/context_create_url.cpp \
+command/context_create_url.h \
 command/context_last.h \
 command/context_start.h \
 command/context_status.h \
