--- a/trunk/debian/Makefile.am
+++ b/trunk/debian/Makefile.am
@@ -1,14 +1,15 @@
 EXTRA_DIST = \
-	README* \
-	extra/etc/btg/* extra/var/lib/btg/* \
+	README.this \
+	extra/etc/btg/client.ini extra/etc/btg/daemon.ini extra/etc/btg/config.php \
+	extra/var/lib/btg/auth extra/var/lib/btg/sessions \
 	compat \
-	*.install \
-	*.init \
-	*.postinst \
-	*.postrm \
-	*.sh \
-	*.pl \
+	btg-cli-common.install btg-cli.install btg-common.install btg-daemon.install btg-gui.install btg-www.install \
+	btg-daemon.init \
+	btg-daemon.postinst btg-www.postinst \
+	btg-daemon.postrm \
+	build.gen.sh control.gen.sh debfiles.gen.sh \
+	changelog.add.pl \
 	rules \
 	compat \
-	control* \
+	control.in \
 	changelog
