Partial fix of bug 013501.

--- a/trunk/bcore/client/Makefile.am
+++ b/trunk/bcore/client/Makefile.am
@@ -12,7 +12,7 @@ handlerthr.cpp \
 clientdynconfig.cpp \
 loglevel.cpp \
 ratio.cpp \
-urlhelper.cpp
+urlhelper.cpp filephelper.cpp
 
 noinst_HEADERS = carg.h \
 configuration.h lastfiles.h \
@@ -25,7 +25,7 @@ handlerthr.h \
 clientdynconfig.h \
 loglevel.h \
 ratio.h \
-urlhelper.h
+urlhelper.h filephelper.h
 
 libbtgclient_la_CFLAGS   = @DEBUG_CFLAGS@ -DBTG_DEBUG=@BTG_DEBUG@ -DBTG_REV="@BTG_REV@"
 libbtgclient_la_CXXFLAGS = @DEBUG_CXXFLAGS@ -DBTG_DEBUG=@BTG_DEBUG@ -DBTG_REV="@BTG_REV@"
