--- a/trunk/UI/gui/Makefile.am
+++ b/trunk/UI/gui/Makefile.am
@@ -12,7 +12,7 @@ sessionselection.cpp authdialog.cpp sndialog.cpp \
 gtkmm_log.cpp guihandler.cpp traficmodel.cpp traficplot.cpp logtextview.cpp mainfiletreeview.cpp selectfiletreeview.cpp mainnotebook.cpp mainmodel.cpp filemodel.cpp fipixbox.cpp mainstatusbar.cpp mainmenubar.cpp maintreeview.cpp \
 peermodel.cpp peertreeview.cpp \
 detailsmodel.cpp detailstreeview.cpp \
-mainwindow.cpp btgui.cpp guiutils.cpp
+mainwindow_create.cpp mainwindow.cpp btgui.cpp guiutils.cpp
 
 noinst_HEADERS = initwindow.h progressdialog.h urldialog.h \
 errordialog.h questiondialog.h prefdialog.h aboutdialog.h aboutimage.h \
