--- a/trunk/UI/cli/Makefile.am
+++ b/trunk/UI/cli/Makefile.am
@@ -2,8 +2,8 @@ SUBDIRS = ncurses
 
 bin_PROGRAMS = btgcli
 
-btgcli_SOURCES = cli.cpp nscreen.cpp nscreen_log.cpp btgcli.cpp
-noinst_HEADERS = runstate.h cli.h nscreen.h nscreen_log.h
+btgcli_SOURCES = clicmd.cpp cli_create.cpp cli.cpp nscreen.cpp nscreen_log.cpp btgcli.cpp
+noinst_HEADERS = runstate.h clicmd.h cli.h nscreen.h nscreen_log.h
 btgcli_LDADD   = $(top_builddir)/bcore/libbtgcore.la \
                  $(top_builddir)/bcore/client/libbtgclient.la \
                  $(top_builddir)/external/ini/libini.la \
