UPnP-enabled CyberLink-disabled build fix

--- a/trunk/configure.in
+++ b/trunk/configure.in
@@ -347,7 +347,7 @@ PKG_CHECK_MODULES(CYBERLINK, [libclinkcc], [
 	AM_CONDITIONAL(BUILDCYBERLINK, true)
 	BTG_OPTION_USECYBERLINK=1
 	CYBERLINK_CFLAGS="$CYBERLINK_CFLAGS -DHAVE_SOCKLEN_T"
-])
+], [ AC_MSG_NOTICE([can't find CyberLink library ($CYBERLINK_PKG_ERRORS)]) ])
 fi
 
 fi dnl if $enableupnp
