--- a/trunk/UI/gui/viewer/sdl/Makefile.am
+++ b/trunk/UI/gui/viewer/sdl/Makefile.am
@@ -2,7 +2,7 @@ bin_PROGRAMS = btgvs
 
 btgvs_SOURCES = arg.cpp handler.cpp ui.cpp ui_style.cpp btgvs.cpp
 
-noinst_HEADERS = agar-if.h arg.h handler.h ui.h btgvs.h
+noinst_HEADERS = agar-if.h arg.h handler.h ui.h
 
 btgvs_LDADD   = $(top_builddir)/bcore/libbtgcore.la \
                 $(top_builddir)/bcore/client/libbtgclient.la \
